# openturbine

./: .gitignore  .readthedocs.yaml  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appvayor.yml  appveyor.yml  build_binary.bat  build_binary.sh  build_linux.sh  build_macos.sh  build_windows.sh  pyproject.toml  release_0.1.0.txt  requirements.txt  test
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
archive/python_v0.1/: .readthedocs.yaml  CMakeLists.txt  README_OLD.md  build_binary.bat  build_binary.ps1  openturbine.sh  setup.py
archive/python_v0.1/docs/: parameters.md  roadmap.md
archive/python_v0.1/src/bindings/: pybind_control.cpp  pybind_structural.cpp
archive/python_v0.1/src/core/: CMakeLists.txt  core_types.cpp  core_types.h
archive/python_v0.1/src/core/aerodynamics/: airfoil.cpp  airfoil.h  bem_solver.h  wake_model.cpp  wake_model.h
archive/python_v0.1/src/core/control/: pid_controller.cpp  pid_controller.h  pitch_controller.h
archive/python_v0.1/src/core/environmental/: wind_field.cpp
archive/python_v0.1/src/core/structural/: beam_solver.cpp  beam_solver.h
archive/python_v0.1/src/openturbine/: __init__.py  simulation_runner.py
archive/python_v0.1/src/openturbine/models/: simulation_result.py  turbine_config.py
archive/python_v0.1/src/openturbine/ui/visualization/: turbine_3d_view.py
archive/python_v0.1/src/openturbine/utils/: config_loader.py  unit_converter.py
archive/python_v0.1/tests/: conftest.py
archive/python_v0.1/tests/integration/: __init__.py  test_simulation_workflow.py
archive/python_v0.1/tests/unit/: __init__.py
configs/defaults/: aerodynamics.json  control.json  environment.json  simulation.json  structural.json  turbine.json
configs/presets/: community_100kw.json  iea_10mw.json  nrel_5mw.json
core/: Cargo.toml
core/src/: lib.rs  main.rs  simulation.rs  types.rs
docs/: conf.py  index.rst
docs/api/: index.rst
docs/theory/: index.rst
docs/user_guide/: index.rst
gui/: Cargo.toml
gui/examples/: test_pdf.rs
gui/src/: lib.rs  main.rs
src/bindings/: CMakeLists.txt  pybind_aerodynamics.cpp  pybind_core.cpp  pybind_environmental.cpp
src/core/: CMakeLists.txt
src/core/aerodynamics/: bem_solver.cpp  bem_solver.h  wake_model.h
src/core/control/: pid_controller.h
src/core/environmental/: turbulence.cpp  turbulence.h  wind_field.h
src/core/structural/: beam_solver.cpp  beam_solver.h  fatigue.cpp  fatigue.h
src/openturbine/: simulation_runner.py  version.py
src/openturbine/models/: __init__.py  simulation_result.py  turbine_config.py
src/openturbine/ui/: main_window.py
src/openturbine/ui/visualization/: __init__.py  turbine_2d_schematic.py  turbine_3d_view.py
src/openturbine/utils/: __init__.py  config_loader.py  unit_converter.py
tests/unit/: test_config_loader.py  test_models.py  test_simulation_runner.py
wasm_host/: Cargo.toml
wasm_host/src/: main.rs
