[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openturbine"
version = "0.1.0"
description = "Open-source wind turbine simulation software"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Romano E. Torrano", email = "romano.torrano@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "pyqtgraph>=0.12.0",
]

[project.optional-dependencies]
ui = ["PySide6>=6.4.0", "vtk>=9.2.0"]
full = ["PySide6>=6.4.0", "vtk>=9.2.0", "pyvista>=0.37.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0", "black>=22.0.0", "flake8>=4.0.0", "mypy>=0.950"]

[project.urls]
Homepage = "https://github.com/retorrano/openturbine"
Documentation = "https://openturbine.readthedocs.io"
Repository = "https://github.com/retorrano/openturbine"
Issues = "https://github.com/retorrano/openturbine/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"
