[package]
name = "openturbine_rs"
version = "0.1.0"
edition = "2021"
description = "Open-source wind turbine simulation software for design verification and analysis"
authors = ["Romano E. Torrano"]
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
