[package]
name = "openturbine_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = { version = "0.28", default-features = false, features = ["render", "open_url"] }
egui_plot = "0.28"
openturbine_rs = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
getrandom = { workspace = true }
uuid = { workspace = true }
